gcc/testsuite/g++.old-deja/g++.pt/crash4.C
// { dg-do assemble  }

template <unsigned rank>
class Tensor
{
};

template <unsigned rank>
class Tensor<2> : Tensor<rank> { // { dg-error "" } template parameters not used
};

